--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -27,6 +28,7 @@
     "@storybook/react": "^6.2.9",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "babel-loader": "^8.2.2",
