--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeForeground": "#000",
-    "titleBar.inactiveForeground": "#000000CC",
-    "titleBar.activeBackground": "#FFC600",
-    "titleBar.inactiveBackground": "#FFC600CC"
+    "titleBar.activeForeground": "#FFF",
+    "titleBar.inactiveForeground": "#FFF",
+    "titleBar.activeBackground": "#F231A5",
+    "titleBar.inactiveBackground": "#F231A5"
   },
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
