--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "polished": "^4.1.3",
+    "prettysize": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "styled-components": "^5.3.0",
