--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "apexcharts": "^3.27.1",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "polished": "^4.1.3",
     "prettysize": "^2.0.0",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
