--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "apexcharts": "^3.27.1",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "polished": "^4.1.3",
