--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "styled-components": "^5.3.0",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
