--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
+    "react-kawaii": "^0.17.0",
     "react-player": "^2.9.0",
     "styled-components": "^5.3.0",
     "styled-media-query": "^2.1.2",
@@ -42,6 +43,7 @@
     "@storybook/react": "^6.2.9",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/react-kawaii": "^0.11.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
