--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.1",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
@@ -22,6 +23,7 @@
     "apexcharts": "^3.27.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.5.1",
     "next": "10.2.3",
     "polished": "^4.1.3",
     "prettysize": "^2.0.0",
