--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "next": "10.2.3",
+    "nextjs-progressbar": "^0.0.11",
     "polished": "^4.1.3",
     "prettysize": "^2.0.0",
     "react": "17.0.2",
