--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "next": "10.2.3",
+    "next-auth": "^3.29.0",
     "nextjs-progressbar": "^0.0.11",
     "polished": "^4.1.3",
     "prettysize": "^2.0.0",
@@ -48,6 +49,7 @@
     "@babel/plugin-transform-react-jsx": "^7.14.3",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-kawaii": "^0.11.0",
