--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-player": "^2.9.0",
     "styled-components": "^5.3.0",
     "styled-media-query": "^2.1.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@types/react": "^17.0.8",
     "@types/react-kawaii": "^0.11.0",
     "@types/styled-components": "^5.1.9",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "apollo": "^2.33.4",
