--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^4.2.0",
     "react-kawaii": "^0.17.0",
     "react-player": "^2.9.0",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.0",
     "styled-media-query": "^2.1.2",
     "uuid": "^8.3.2",
@@ -55,12 +56,15 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-kawaii": "^0.11.0",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "apollo": "^2.33.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.13.3",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
