--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-icons": "^4.2.0",
     "react-kawaii": "^0.17.0",
     "react-player": "^2.9.0",
-    "socket.io-client": "^4.3.2",
+    "socket.io-client": "2.2.0",
     "styled-components": "^5.3.0",
     "styled-media-query": "^2.1.2",
     "uuid": "^8.3.2",
