--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "apexcharts": "^3.27.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
