--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@chakra-ui/react": "^1.6.3",
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.82",
+    "@mui/material": "^5.8.0",
     "apexcharts": "^3.27.1",
+    "chart.js": "^3.7.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
@@ -35,6 +39,7 @@
     "prettysize": "^2.0.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
